# healthify

./: .env.example  .gitignore  API_REFERENCE.md  MASTER_PROMPT.md  README.md  pyproject.toml
backend/: config.py  main.py
backend/api/schemas/: analysis.py  common.py  report.py  risk.py
backend/api/v1/: analysis.py  health.py  reports.py  risk.py  router.py
backend/core/: disclaimer.py  image_parser.py  parser.py  pdf_parser.py  simplifier.py  validator.py
backend/ml/: classifier.py  explainer.py  isolation_forest.py  reference_ranges.py  risk_engine.py  zscore_detector.py
data/: reference_ranges.json  safety_conditions.json  symptom_condition_map.json
data/sample_reports/: anemia_report.csv  diabetes_risk.csv  malformed.csv  normal_report.csv
frontend/src/: App.jsx
scripts/: prepare_classifier_data.py  prepare_training_data.py  train_classifier.py  train_isolation_forest.py
tests/: conftest.py
tests/e2e/: test_full_flow.py
tests/integration/: test_analysis_endpoints.py  test_explain_endpoint.py  test_predict_endpoint.py  test_report_endpoints.py  test_risk_endpoints.py
tests/unit/: test_classifier.py  test_explainer.py  test_image_parser.py  test_isolation_forest.py  test_parser.py  test_pdf_parser.py  test_reference_ranges.py  test_risk_engine.py  test_validator.py  test_zscore_detector.py
